<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.matsim</groupId>
	<artifactId>contrib</artifactId>
	<packaging>pom</packaging>
	<version>12.0-SNAPSHOT</version>
	<name>MATSim-Contrib</name>

	<scm>
		<url>https://github.com/matsim-org/matsim</url>
		<connection>scm:git:git://github.com/matsim-org/matsim.git</connection>
		<developerConnection>scm:git:git@github.com:matsim-org/matsim.git</developerConnection>
	</scm>

	<distributionManagement>
		<repository>
			<id>bintray</id>
			<url>https://api.bintray.com/maven/matsim/matsim/matsim</url>
		</repository>
		<snapshotRepository>
			<id>oss-jfrog-artifactory</id>
			<name>artifactory-snapshots</name>
			<url>https://oss.jfrog.org/oss-snapshot-local</url>
		</snapshotRepository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
					<revisionOnScmFailure>unknown</revisionOnScmFailure>
					<timestampFormat>{0,date,yyyy-MM-dd HH:mm:ss}</timestampFormat>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.2</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>libs/</classpathPrefix>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<linksource>true</linksource>
					<doclint>none</doclint>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.19</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.3.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.2.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.2.1</version>
					<configuration>
						<descriptors>
							<descriptor>src/main/assembly/assembly-release.xml</descriptor>
						</descriptors>
					</configuration>
					<executions>
						<execution>
							<id>make-assembly</id>
							<phase>package</phase>
							<goals>
								<goal>single</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<modules>
		<module>accessibility</module>
		<module>accidents</module>
		<module>analysis</module>
		<module>av</module>
		<module>bicycle</module>
		<module>cadytsIntegration</module>
		<module>carsharing</module>
		<module>commercialTrafficApplications</module>
		<module>common</module>
		<module>decongestion</module>
		<module>drt</module>
		<module>dvrp</module>
		<module>ev</module>
		<module>emissions</module>
		<module>eventsBasedPTRouter</module>
		<module>freight</module>
		<module>hybridsim</module>
		<module>integration</module>
		<module>locationchoice</module>
		<module>matrixbasedptrouter</module>
		<module>minibus</module>
		<module>multimodal</module>
		<module>noise</module>
		<module>osm</module>
		<module>otfvis</module>
		<module>parking</module>
		<module>protobuf</module>
		<module>pseudosimulation</module>
		<module>roadpricing</module>
		<module>signals</module>
		<module>socnetsim</module>
		<module>taxi</module>
		<module>vsp</module>
	</modules>
	<repositories>
		<repository>
			<!-- Geotools is not on Maven central -->
			<id>geotools</id>
			<name>Geotools repository</name>
			<url>http://download.osgeo.org/webdav/geotools</url>
		</repository>
		<repository>
			<id>matsim</id>
			<url>https://dl.bintray.com/matsim/matsim</url>
		</repository>
		<repository>
			<id>ch.sbb</id>
			<url>https://schweizerischebundesbahnen.bintray.com/simba.mvn</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>12.0-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>12.0-SNAPSHOT</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<!--MATSim examples.  Not inherited from matsim since it-->
			<!--is in test scope there.  Leave in test scope since-->
			<!--it is not in weekly releases and then causes problems.  -->
			<groupId>org.matsim</groupId>
			<artifactId>matsim-examples</artifactId>
			<!--<version>0.10.0</version>-->
			<!--<version>0.11.0-apr17</version>-->
			<scope>test</scope>
			<version>12.0-SNAPSHOT</version>
			<!--(This has possibly no effect here, don't know.)-->
		</dependency>
		<dependency>
			<!-- needed to compile in IntelliJ with Eclipse compiler -->
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>hudson</id>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>cobertura-maven-plugin</artifactId>
							<version>2.7</version>
							<configuration>
								<formats>
									<format>xml</format>
								</formats>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-javadoc-plugin</artifactId>
							<version>3.1.1</version>
							<configuration>
								<doclint>none</doclint>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

</project>
